# wikiauthbot-ng

./: .gitignore  API.md  Cargo.toml  LICENSE  Procfile  README.md  RustConfig  bot_config.toml  build.rs  config.toml  flake.nix  jobs.yaml  rustfmt.toml
datatool/: Cargo.toml
datatool/src/: main.rs
jsonloader/: Cargo.toml
jsonloader/src/: main.rs
keygen/: Cargo.toml
keygen/src/: main.rs
resources/: az.ftl  be.ftl  bg.ftl  bn.ftl  bs.ftl  da.ftl  de.ftl  en.ftl  es.ftl  fr.ftl  it.ftl  ja.ftl  lo.ftl  ms.ftl  nl.ftl  pl.ftl  ru.ftl  tok.ftl  uk.ftl  vi.ftl  zh-hans.ftl
src/: commands.rs  events.rs  integrity.rs  jsonloader.rs  logging.rs  main.rs
src/commands/: auth.rs  deauth.rs  guilds.rs  misc.rs  revwhois.rs  utils.rs  whois.rs
src/commands/whois/: fetch.rs  mod.rs  updates.rs
wikiauthbot-common/: Cargo.toml
wikiauthbot-common/src/: auth.rs  config.rs  i18n.rs  lib.rs  webhook.rs
wikiauthbot-db/: .env.example  Cargo.toml  init.sql
wikiauthbot-db/entity/: Cargo.toml
wikiauthbot-db/entity/src/: accounts.rs  auth.rs  lib.rs  mod.rs  prelude.rs  server_settings.rs
wikiauthbot-db/migration/: Cargo.toml
wikiauthbot-db/migration/src/: lib.rs  m20231223_170003_create_table.rs  m20231226_043934_create_accounts_table.rs  m20240102_152634_update_server_settings_table.rs
wikiauthbot-db/src/: add_whois_ephemeral.sql  lib.rs  migrations.rs  server.rs
wikiauthbot-db/src/migrations/: 20240913001_init.sql  20240913002_typecorrection.sql  20250221001_add_field.sql  20250221001_major_update.sql
wikiauthbot-server/: Cargo.toml
wikiauthbot-server/src/: lib.rs  main.rs  privacy_statement.html
