[workspace]
members = [
    "wikiauthbot-server",
    "wikiauthbot-db",
    "wikiauthbot-db/migration",
    "wikiauthbot-db/entity",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.74.0"
edition = "2021"

[workspace.dependencies]
sea-orm = { version = "0.12.10", features = [ "sqlx-mysql" ] }

[package]
name = "wikiauthbot-ng"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
poise = "0.6.1-rc"
reqwest = { version = "0.11.22", default-features = false, features = ["tokio-rustls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }


[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "model", "cache", "rustls_backend"]

[[bin]]
name = "jsonloader"
path = "src/jsonloader.rs"
