[workspace]
members = [
    "wikiauthbot-server",
    "wikiauthbot-db",
    "wikiauthbot-common",
    "jsonloader",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.74.0"
edition = "2021"

[workspace.dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
fred = "8.0.3"
mwapi = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
tokio = { version = "1.35.0", features = ["rt-multi-thread"] }

[package]
name = "wikiauthbot-ng"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
color-eyre.workspace = true
dotenvy.workspace = true
mwapi.workspace = true
poise = "0.6.1-rc"
fred.workspace = true
reqwest = { version = "0.11.22", default-features = false, features = ["tokio-rustls", "json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
wikiauthbot-common = { path = "./wikiauthbot-common" }
wikiauthbot-db = { path = "wikiauthbot-db" }
wikiauthbot-server = { path = "wikiauthbot-server" }

[dependencies.serenity]
version = "0.12.0"
default-features = false
features = ["client", "model", "cache", "rustls_backend"]
