[package]
name = "jsonloader"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
dotenvy.workspace = true
mwapi.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
wikiauthbot-db = { path = "../wikiauthbot-db" }
wikiauthbot-common = { path = "../wikiauthbot-common" }