[package]
name = "wikiauthbot-common"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
rand = "0.8.5"
serde.workspace = true
toml = { version = "0.8.8", default-features = false, features = ["parse"] }
mwapi.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
fluent = "0.16.1"
unic-langid = { version = "0.9.4", features = ["macros"] }
