[package]
name = "wikiauthbot-db"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy.workspace = true
sea-orm.workspace = true
wikiauthbot-db-entity = { path = "entity" }
