[package]
name = "wikiauthbot-db"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
fred.workspace = true
wikiauthbot-common = { path = "../wikiauthbot-common" }
tracing.workspace = true
