[package]
name = "wikiauthbot-db"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre.workspace = true
futures.workspace = true
fred.workspace = true
wikiauthbot-common = { path = "../wikiauthbot-common" }
tokio.workspace = true
tracing.workspace = true
dashmap = "5.5.3"
