[package]
name = "wikiauthbot-server"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls", "json"] }
serde.workspace = true
tokio = { version = "1.35.1", features = ["sync"] }
wikiauthbot-common = { path = "../wikiauthbot-common" }
wikiauthbot-db = { path = "../wikiauthbot-db" }
color-eyre.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
